tests/ui/error-codes/E0010-teach.stderr
error[E0015]: cannot call non-const associated function `Box::<[i32; 3]>::new` in constants
  --> $DIR/E0010-teach.rs:5:23
   |
LL | const CON: Vec<i32> = vec![1, 2, 3];
   |                       ^^^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0015]: cannot call non-const method `slice::<impl [i32]>::into_vec::<std::alloc::Global>` in constants
  --> $DIR/E0010-teach.rs:5:23
   |
LL | const CON: Vec<i32> = vec![1, 2, 3];
   |                       ^^^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
